opam-version: "1.2"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/irmin-resp"
doc: "https://github.com/zshipko/irmin-resp/doc"
license: "ISC"
dev-repo: "https://github.com/zshipko/irmin-resp.git"
bug-reports: "https://github.com/zshipko/irmin-resp/issues"
tags: []

available: [ ocaml-version >= "4.03.0"]

depends:
[
    "dune" {build}
    "irmin-unix"
    "irmin-mem"
    "resp-server"
]

depopts: []

build:
[
    ["dune" "build" "-p" name "-j" jobs]
]

build-test:
[
    ["dune" "runtest"]
]
